# MVEDDA

./: .gitignore  AUTHORS.md  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  edda.h.in
codda/: CMakeLists.txt  combustion_arbitrary_recon.cpp  combustion_store_grid_map.cpp  combustion_test_grid.cpp  isabel_arbitrary_recon.cpp  isabel_arbitrary_recon_4var.cpp  isabel_arbitrary_recon_backup.cpp  isabel_store_grid_map.cpp  isabel_test_grid.cpp  mveddaIO.h  new_combustion_store_grid_map.cpp  new_isabel_store_grid_map.cpp  test_read.cpp  turbine_perProcessor_fullAnnulus_conditionalQuery.cpp  turbine_perProcessor_fullAnnulus_recon.cpp  turbine_perProcessor_onePsg_recon.cpp  utility_functions.h
examples/: CMakeLists.txt  MVDistrModelerExample_GMM.cpp  MVDistrModelerExample_Hist.cpp  VectorDistrModelerExample.cpp  distrModelerExample.cpp  gmm_raw2vtk.cpp  jointGMMIOExample.cpp  jointHistIOExample.cpp  loadCurvilinearDataset.cpp  loadScalarDataset.cpp  scalarIOExample.cpp  vectorIOExample.cpp
html/: AUTHORS_8md.html  LICENSE_8md.html  README_8md.html  VecDistrModeler_8h.html  VecDistrModeler_8h_source.html  abstract__data__array_8h.html  abstract__data__array_8h_source.html  abstract__sampling__array_8h.html  abstract__sampling__array_8h_source.html  annotated.html  bmp__image_8h.html  bmp__image_8h_source.html  classeddaRandomProbeFilter-members.html  classeddaRandomProbeFilter.html  classeddaRandomProbeFilter_1_1vtkVectorOfArrays.html  classeddaRandomSampleField-members.html  classeddaRandomSampleField.html  classeddaSamplingArray-members.html  classeddaSamplingArray.html  classeddaThreshold-members.html  classeddaThreshold.html  classeddaUncertainIsocontour-members.html  classeddaUncertainIsocontour.html  classedda_1_1AbstractDataArray-members.html  classedda_1_1AbstractDataArray.html  classedda_1_1CartesianGrid-members.html  classedda_1_1CartesianGrid.html  classedda_1_1CurvilinearGrid-members.html  classedda_1_1CurvilinearGrid.html  classedda_1_1DataSamplingArray-members.html  classedda_1_1DataSamplingArray.html  classedda_1_1Dataset-members.html  classedda_1_1Dataset.html  classedda_1_1DistrArray-members.html  classedda_1_1DistrArray.html  classedda_1_1DistributionModeler-members.html  classedda_1_1DistributionModeler.html  classedda_1_1GmmArray-members.html  classedda_1_1GmmArray.html  classedda_1_1GmmVtkDataArray-members.html  (+416 more)
html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+114 more)
sample_data/: out_0_9602.vts  subIsabel.raw
src/: CMakeLists.txt  common.h  edda_export.h
src/core/: interpolator.h  ndarray.h  shared_ary.h  statistics.h  thrust_common.h  thrust_gmm_array.h  thrust_histo_array.h  tuple.h  vector_matrix.cpp  vector_matrix.h
src/dataset/: curvilinear_grid.cpp  curvilinear_grid.h  dataset.h  distr_array.h  grid.cpp  grid.h
src/distributions/: distribution.h  distribution_modeler.h  distribution_tag.h  estimate_gmm.h  gaussian.h  gaussian_mixture.h  gmm.h  histogram.h  invert_matrix.h  joint_GMM.h  joint_gaussian.h  joint_histogram.h  variant.h
src/io/: edda_reader.cpp  edda_reader.h  edda_vtk_reader.cpp  edda_vtk_reader.h  edda_vtk_writer.cpp  edda_vtk_writer.h  edda_writer.cpp  edda_writer.h  gmm_vtk_data_array.cu  gmm_vtk_data_array.h  nrrd.cpp  nrrd.h  path.cpp  path.h
src/iterators/: ndarray_iterator.h  random_sampling_iterator.h
test/: CMakeLists.txt  bmp_image.h  test_NdArray.cpp  test_NdArray_cuda.cu  test_array.cpp  test_common.h  test_distribution.cpp  test_gaussian.cpp  test_gaussian_cuda.cu  test_histogram_io.cpp  test_io.cpp  test_jointGMM.cpp  test_joint_histogram.cpp  test_thrust.cpp  test_thrust_cuda.cu  test_univarianteGMM.cpp
vis/: CMakeLists.txt
vis/examples/: CMakeLists.txt  fuzzyIsocontourVTK.cpp  randomSampleField.cpp  streamlineMonteCarlo.cpp  uncertainIsocontour.cpp  uncertainIsocontourVTK.cpp
vis/src/: CMakeLists.txt
vis/src/filters/: fuzzy_isosurface.h  level_crossing_prob.h
vis/src/vtk/: eddaRandomSampleField.cu  eddaSamplingArray.h  eddaThreshold.cpp
